--- a/templates/index.html
+++ b/templates/index.html
@@ -11,11 +11,11 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 
-    <title>MSBS AlphaX v1.1</title>
+    <title>Market Brahma</title>
   </head>
   <body>
     <div class="container">
-      <h1 class="mt-5">MSBS AlphaX v1.1</h1>
+      <h1 class="mt-5">Market Brahma - AI Content Assistant</h1>
       <form id="generate-form">
         <div class="form-group mt-2">
             <label for="news-input">Enter a URL:</label>
