--- a/static/styles.css
+++ b/static/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;700&display=swap');
 
 body {
   font-family: 'Roboto', Arial, sans-serif;
@@ -6,7 +7,7 @@ body {
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  background-color: #200532;
+  background-color: #091236;
   color: #f1ecef;
 }
 
@@ -15,31 +16,35 @@ body {
   margin: auto;
   border-radius: 20px;
   padding: 20px;
-  background: #49108f;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  background: linear-gradient(135deg, #21293d, #2a2f52);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 }
 
 h1 {
-  font-size: 36px;
+  font-size: 42px;
+  font-family: 'Roboto Mono', monospace;
   font-weight: bold;
   margin-top: 50px;
   margin-bottom: 30px;
   text-align: center;
-  color: #ecf0f1;
+  color: #6fd6ff;
+  text-shadow: 0 0 5px rgba(111, 214, 255, 0.7);
 }
 
-textarea {
+textarea, .input-field {
   width: 100%;
   height: 64px; /* Adjust this value for 2 lines of text */
   margin-bottom: 20px;
   margin-top: 20px;
   padding: 10px;
   font-size: 16px;
+  font-family: 'Roboto Mono', monospace;
   border: none;
   border-radius: 20px;
-  background-color: #ecf0f1;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  background-color: #f4f6f9;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
   color: #000000;
+  margin-right: 10px;
 }
 
 button {
@@ -47,17 +52,18 @@ button {
   margin-bottom: 20px;
   padding: 10px 20px;
   font-size: 16px;
+  font-family: 'Roboto Mono', monospace;
   border: none;
   border-radius: 20px;
-  background-color: #d3378d;
+  background: linear-gradient(135deg, #159957, #155799);
   color: #ecf0f1;
   cursor: pointer;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   transition: background-color 0.3s ease;
 }
 
 button:hover {
-  background-color: #2980b9;
+  background: linear-gradient(135deg, #1ebc85, #2396ce);
 }
 
 #loader {
@@ -72,25 +78,10 @@ button:hover {
 
 #news-input, #search-terms-input, #theme-input {
   height: 64px !important; /* Set height for 2 lines of text */
+  margin-right: 10px;
 }
 
 #news-output {
   width: 100%; /* or specific pixel value */
   height: 500px; /* or specific pixel value */
 }
-
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-
-.input-field {
-    height: 64px !important;
-    width: 100%;
-    border-radius: 20px;
-    margin-bottom: 20px;
-    padding: 10px;
-}
-      
-  
