--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="/static/styles.css">
 
     <title>Market Brahma</title>
   </head>
@@ -55,7 +55,7 @@
     </div>
 
     <!-- Scripts -->
-    <script src="{{ url_for('static', filename='scripts.js') }}"></script>
+    <script src="/static/scripts.js"></script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
