--- a/templates/index.html
+++ b/templates/index.html
@@ -9,14 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" type="text/css" href="http://marketbrahma.s3-website.ap-south-1.amazonaws.com/static/styles.css">
+    <link rel="stylesheet" type="text/css" href="https://d2nb6w4uhiu3h2.cloudfront.net/static/styles.css">
 
     <title>Market Brahma</title>
   </head>
   <body>
     <div class="container">
-        <h1 class="mt-5">Market Brahma - AI Content Assistant</h1>
-        <form id="generate-form">
+      <h1 class="mt-5">Market Brahma - AI Content Assistant</h1>
+      <form id="generate-form" action="http://35.172.213.74:5000/generate" method="POST">
           <div class="form-group mt-2">
               <label for="market-name-input">Enter Market Name:</label>
               <input type="text" class="form-control dynamic-height input-field" id="market-name-input" name="market">
@@ -55,7 +55,7 @@
     </div>
 
     <!-- Scripts -->
-    <script src="http://marketbrahma.s3-website.ap-south-1.amazonaws.com/script/script.js"></script>
+    <script src="https://d2nb6w4uhiu3h2.cloudfront.net/static/scripts.js"></script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
