--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container">
       <h1 class="mt-5">Market Brahma - AI Content Assistant</h1>
-      <form id="generate-form" action="http://35.172.213.74:5000/generate" method="POST">
+      <form id="generate-form" action="/generate" method="POST">
           <div class="form-group mt-2">
               <label for="market-name-input">Enter Market Name:</label>
               <input type="text" class="form-control dynamic-height input-field" id="market-name-input" name="market">
