--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" type="text/css" href="https://d2nb6w4uhiu3h2.cloudfront.net/static/styles.css">
+    <link rel="stylesheet" type="text/css" href="file:///Users/rohithsampathi/Desktop/Code/Papp/artc/static/styles.css">
 
     <title>Market Brahma</title>
   </head>
@@ -55,7 +55,7 @@
     </div>
 
     <!-- Scripts -->
-    <script src="https://d2nb6w4uhiu3h2.cloudfront.net/static/scripts.js"></script>
+    <script src="file:///Users/rohithsampathi/Desktop/Code/Papp/artc/static/scripts.js"></script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
