--- a/templates/index.html
+++ b/templates/index.html
@@ -9,14 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" type="text/css" href="file:///Users/rohithsampathi/Desktop/Code/Papp/artc/static/styles.css">
+    <link rel="stylesheet" type="text/css" href="/static/styles.css">
 
     <title>Market Brahma</title>
   </head>
   <body>
     <div class="container">
       <h1 class="mt-5">Market Brahma - AI Content Assistant</h1>
-      <form id="generate-form" action="${API_URL}/api/generate" method="POST">
+      <form id="generate-form" action="http://54.242.81.142:8000/api/generate" method="POST">
           <div class="form-group mt-2">
               <label for="market-name-input">Enter Market Name:</label>
               <input type="text" class="form-control dynamic-height input-field" id="market-name-input" name="market">
@@ -55,7 +55,7 @@
     </div>
 
     <!-- Scripts -->
-    <script src="file:///Users/rohithsampathi/Desktop/Code/Papp/artc/static/scripts.js"></script>
+    <script src="/static/scripts.js"></script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
